add dockerfile and update compose
