# src/docs/swagger.json
@@ -734,6 +734,72 @@
                 }
             }
         },
+        "/v1/module/test/theor/try/{id}": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "module"
+                ],
+                "summary": "try module theor test",
+                "parameters": [
+                    {
+                        "description": "ModuleTest info",
+                        "name": "moduletest",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/module.TryAnswerQuestionReq"
+                        }
+                    },
+                    {
+                        "type": "integer",
+                        "description": "id of try",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": ""
+                    },
+                    "400": {
+                        "description": "some user error",
+                        "schema": {
+                            "$ref": "#/definitions/err.Error"
+                        }
+                    },
+                    "401": {
+                        "description": "not auth",
+                        "schema": {
+                            "$ref": "#/definitions/err.Error"
+                        }
+                    },
+                    "404": {
+                        "description": "module not found",
+                        "schema": {
+                            "$ref": "#/definitions/err.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "internal",
+                        "schema": {
+                            "$ref": "#/definitions/err.Error"
+                        }
+                    }
+                }
+            }
+        },
         "/v1/module/{id}": {
             "get": {
                 "security": [
@@ -1288,6 +1354,75 @@
                 "responses": {
                     "200": {
                         "description": ""
+                    },
+                    "400": {
+                        "description": "some user error",
+                        "schema": {
+                            "$ref": "#/definitions/err.Error"
+                        }
+                    },
+                    "401": {
+                        "description": "not auth",
+                        "schema": {
+                            "$ref": "#/definitions/err.Error"
+                        }
+                    },
+                    "404": {
+                        "description": "module not found",
+                        "schema": {
+                            "$ref": "#/definitions/err.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "internal",
+                        "schema": {
+                            "$ref": "#/definitions/err.Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/module/{id}/test/theor/try": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "module"
+                ],
+                "summary": "try module theor test",
+                "parameters": [
+                    {
+                        "description": "ModuleTest info",
+                        "name": "moduletest",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/module.TryTheoreticalTestReq"
+                        }
+                    },
+                    {
+                        "type": "integer",
+                        "description": "id of module",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/module.TryTheoreticalTestResp"
+                        }
                     },
                     "400": {
                         "description": "some user error",
@@ -1960,6 +2095,9 @@
                     "items": {
                         "$ref": "#/definitions/module.AddSubModuleResp"
                     }
+                },
+                "tests": {
+                    "$ref": "#/definitions/module.AddModuleTestResp"
                 }
             }
         },
@@ -1991,6 +2129,51 @@
                 },
                 "text": {
                     "type": "string"
+                }
+            }
+        },
+        "module.TryAnswerQuestionReq": {
+            "type": "object",
+            "properties": {
+                "answer": {
+                    "type": "string"
+                },
+                "qustionId": {
+                    "type": "integer"
+                }
+            }
+        },
+        "module.TryTheoreticalTestQuestuions": {
+            "type": "object",
+            "properties": {
+                "answers": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "text": {
+                    "type": "string"
+                }
+            }
+        },
+        "module.TryTheoreticalTestReq": {
+            "type": "object"
+        },
+        "module.TryTheoreticalTestResp": {
+            "type": "object",
+            "properties": {
+                "questions": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/module.TryTheoreticalTestQuestuions"
+                    }
+                },
+                "try_id": {
+                    "type": "integer"
                 }
             }
         },
